--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Our Menu</h1>
     <div class="row">
 
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 marg">
             <div class="mod">
                 <div id="first" class="indiv">Chicken</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere impedit mollitia nostrum? Provident,
@@ -22,7 +22,7 @@
             </div>
         </div>
 
-        <div class="col-lg-4 col-md-6">
+        <div class="col-lg-4 col-md-6 marg">
             <div class="mod">
                 <div id="second" class="indiv">Fruits</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere impedit mollitia nostrum? Provident,
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 " id="div3">
+        <div class="col-lg-4 col-md-6 marg" id="div3">
             <div class="mod">
                 <div id="third" class="indiv">Veggies</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere impedit mollitia nostrum? Provident,
