--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment 3</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="MODULE3/css/bootstrap.css">
+    <link rel="stylesheet" href="MODULE3/css/styles.css">
     <!-- Can insert fonts here as well -->
 </head>
 
@@ -217,8 +217,8 @@
         </a>
     </div>
 
-    <script src="js/jquery-3.5.1.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="MODULE3/js/jquery-3.5.1.js"></script>
+    <script src="MODULE3/js/bootstrap.min.js"></script>
     <!-- <script src="js/script.js"></script> -->
 
 
