--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <script src="angular.min.js"></script>
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="ANGULAR/Assignment1/styles/bootstrap.min.css">
+    <script src="ANGULAR/Assignment1/angular.min.js"></script>
+    <script src="ANGULAR/Assignment1/app.js"></script>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
