--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Shopping List Check Off</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <link rel="stylesheet" href="ANGULAR/Assignment2/styles/bootstrap.min.css">
 
   <style>
     .emptyMessage {
@@ -60,8 +60,8 @@
     </div>
   </div>
 
-  <script src="angular.min.js"></script>
-  <script src="app.js"></script>
+  <script src="ANGULAR/Assignment2/angular.min.js"></script>
+  <script src="ANGULAR/Assignment2/app.js"></script>
 
 </body>
 
