--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <title>Narrow Down Your Menu Choice</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="ANGULAR/Assignment3/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="ANGULAR/Assignment3/styles/styles.css">
   </head>
 <body ng-app="NarrowItDownApp">
    <div class="container" ng-controller="NarrowItDownController as datalist">
@@ -23,7 +23,7 @@
     </found-items>
   </div>
 
-  <script src="angular.min.js"></script>
-  <script src="app.js"></script>
+  <script src="ANGULAR/Assignment3/angular.min.js"></script>
+  <script src="ANGULAR/Assignment3/app.js"></script>
 </body>
 </html>
