--- a/ANGULAR/Assignment5/src/public/reg/register.html
+++ b/ANGULAR/Assignment5/src/public/reg/register.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="ANGULAR/Assignment5/css/styles.css">
 <div class="container">
 <fieldset>
     <legend>Registration</legend>
