--- a/ANGULAR/Assignment5/src/public/reg/user.html
+++ b/ANGULAR/Assignment5/src/public/reg/user.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="ANGULAR/Assignment5/css/styles.css">
 <div ng-show="userCtrl.user" class="container">
     <h2>My Info</h2>
 
